welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:16: error: ')' expected but '}' found.
		}
                ^